--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <!-- header start -->
         <nav>
             <h3 class="nav-title">G3 Architects</h3>
             <ul>
@@ -26,8 +27,22 @@
               <img src="images/banner.png" alt="">
         </div>
     </header>
+    <!-- header close -->
     <main>
-
+        <!-- tems section start -->
+        <section class="tems-container">
+            <div class="tems-img-container">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="tems-content">
+                <h3 class="tems-title"><span class="Quick-list">Quick list</span>  <span>of our</span>  <span class="text-features">features</span></h3>
+                <p class="tems-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
     </main>
     <footer>
 
