--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
             </ul>
         </nav>
         <div class="banner">
-                <div class="banner-content">
+                <div class="banner-container">
                     <h1 class="banner-title">Brand New Group of Architects</h1>
-                    <p class="banner-discription">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>>
+                    <p class="btext-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>>
                    <button class="btn-primary">Explore More</button>
                 </div>
               <img src="images/banner.png" alt="">
         </div>
     </header>
-    <!-- header close -->
+     
     <main>
         <!-- tems section start -->
         <section class="tems-container">
@@ -38,8 +38,8 @@
                 <img src="images/team4.png" alt="">
             </div>
             <div class="tems-content">
-                <h3 class="tems-title"><span class="Quick-list">Quick list</span>  <span>of our</span>  <span class="text-features">features</span></h3>
-                <p class="tems-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <h3 class="tems-title"><span class="Quick-list text-light-gray ">Quick list</span>  <span>of our</span>  <span class="text-features">features</span></h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
