--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <!-- header start -->
         <nav>
-            <h3 class="nav-title">G3 Architects</h3>
+            <h3 class="section-title">G3 Architects</h3>
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
@@ -24,7 +24,9 @@
                     <p class="btext-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>>
                    <button class="btn-primary">Explore More</button>
                 </div>
+                <div class="img-content"> 
               <img src="images/banner.png" alt="">
+            </div>
         </div>
     </header>
      
@@ -37,11 +39,50 @@
                 <img src="images/team3.png" alt="">
                 <img src="images/team4.png" alt="">
             </div>
-            <div class="tems-content">
-                <h3 class="tems-title"><span class="Quick-list text-light-gray ">Quick list</span>  <span>of our</span>  <span class="text-features">features</span></h3>
+            <div class="section-title">
+                <h3 class="tems-title"><span class="Quick-list text-light-gray">Quick list</span>  <span>of our</span>  <span class="text-features">features</span></h3>
                 <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="btn-primary">Explore More</button>
             </div>
+        </section>
+        <!-- fects section-->
+        <section class="fects">
+        <h3 class="section-title">Some facts</h3>
+        <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+        <div class="facts-card-container">
+            <div class="card">
+                <img src="images/icons/ribon.png" alt="">
+                <h2 class="card-stats">54</h2>
+                <p class="card-title">Awards Winnings</p>
+            </div>
+            <div class="card">
+                <img src="images/icons/projects.png" alt="">
+                <h2 class="card-stats">1458</h2>
+                <p class="card-title">Project Finished</p>
+            </div>
+            <div class="card">
+                <img src="images/icons/customers.png" alt="">
+                <h2 class="card-stats">590</h2>
+                <p class="card-title">Clients Worked</p>
+            </div>
+            <div class="card">
+                <img src="images/icons/email.png" alt="">
+                <h2 class="card-stats">22578</h2>
+                <p class="card-title">Email Send</p>
+            </div>
+        </div>
+        </section>
+        <!-- sponsors section -->
+        <section class="sponsors">
+                <h3 class="section-title">Our Sponsors</h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration</p>
+               <div class="sponsors-img-container">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+               </div>
         </section>
     </main>
     <footer>
